--- a/project_1/lm_playground.ipynb
+++ b/project_1/lm_playground.ipynb
@@ -46,24 +46,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "1235110e",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1235110e",
-        "outputId": "db9927dc-bfb1-440e-fe0c-b66b2328e412"
+        "id": "1235110e"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "torch 2.8.0+cu126 | transformers 4.56.2\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import torch, transformers, tiktoken\n",
         "print(\"torch\", torch.__version__, \"| transformers\", transformers.__version__)"
@@ -100,29 +88,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "d784a288",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "d784a288",
-        "outputId": "3e0cfca8-81d6-4fe7-8d40-c5503c33061b"
+        "id": "d784a288"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Vocabulary size: 22 words\n",
-            "First 15 vocab entries: ['[PAD]', '[UNK]', 'The', 'quick', 'brown', 'fox', 'jumps', 'over', 'the', 'lazy', 'dog', 'Tokenization', 'converts', 'text', 'to']\n",
-            "\n",
-            "Input text : The brown unicorn jumps\n",
-            "Token IDs  : [2, 4, 1, 6]\n",
-            "Decoded    : The brown [UNK] jumps\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# 1. Tiny corpus\n",
         "corpus = [\n",
@@ -133,21 +104,13 @@
         "\n",
         "# 2. Build the vocabulary\n",
         "PAD, UNK = \"[PAD]\", \"[UNK]\"\n",
-        "vocab = [PAD, UNK]\n",
-        "word2id = {PAD: 0, UNK: 1}\n",
-        "id2word = {0: PAD, 1: UNK}\n",
+        "vocab = []\n",
+        "word2id = {}\n",
+        "id2word = {}\n",
         "\n",
         "\"\"\"\n",
         "YOUR CODE HERE\n",
         "\"\"\"\n",
-        "current_id = 2\n",
-        "for line in corpus:\n",
-        "  for word in line.split(\" \"):\n",
-        "    if word not in vocab:\n",
-        "      vocab.append(word)\n",
-        "      word2id[word] = current_id\n",
-        "      id2word[current_id] = word\n",
-        "      current_id += 1\n",
         "\n",
         "print(f\"Vocabulary size: {len(vocab)} words\")\n",
         "print(\"First 15 vocab entries:\", vocab[:15])\n",
@@ -157,29 +120,13 @@
         "    \"\"\"\n",
         "    YOUR CODE HERE\n",
         "    \"\"\"\n",
-        "    result = []\n",
-        "    for word in text.split(\" \"):\n",
-        "      if word in word2id:\n",
-        "        id = word2id[word]\n",
-        "      else:\n",
-        "        id = word2id[UNK]\n",
-        "      result.append(id)\n",
-        "\n",
-        "    return result\n",
+        "    pass\n",
         "\n",
         "def decode(ids):\n",
         "    \"\"\"\n",
         "    YOUR CODE HERE\n",
         "    \"\"\"\n",
-        "    result = []\n",
-        "    for id in ids:\n",
-        "      if id in id2word:\n",
-        "        word = id2word[id]\n",
-        "      else:\n",
-        "        word = UNK\n",
-        "      result.append(word)\n",
-        "\n",
-        "    return \" \".join(result)\n",
+        "    pass\n",
         "\n",
         "# 4. Demo\n",
         "sample = \"The brown unicorn jumps\"\n",
@@ -187,7 +134,6 @@
         "recovered = decode(ids)\n",
         "\n",
         "print(\"\\nInput text :\", sample)\n",
-        "\n",
         "print(\"Token IDs  :\", ids)\n",
         "print(\"Decoded    :\", recovered)"
       ]
@@ -218,28 +164,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "4ac29144",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4ac29144",
-        "outputId": "1b31cc14-1fb8-4582-eec0-2ffc652a8735"
+        "id": "4ac29144"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Vocabulary size: 54 (52 letters + 2 specials)\n",
-            "\n",
-            "Input text : Hello\n",
-            "Token IDs  : [17, 10, 24, 24, 30]\n",
-            "Decoded    : Hello\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# 1. Build a fixed vocabulary # a–z + A–Z + padding + unkwown\n",
         "import string\n",
@@ -250,15 +180,6 @@
         "\"\"\"\n",
         "YOUR CODE HERE\n",
         "\"\"\"\n",
-        "vocab.append(\"[PAD]\")\n",
-        "vocab.append(\"[UNK]\")\n",
-        "for char in string.ascii_lowercase:\n",
-        "  vocab.append(char)\n",
-        "  char2id[char] = len(vocab) - 1\n",
-        "  id2char[len(vocab) - 1] = char\n",
-        "  vocab.append(char.upper())\n",
-        "  char2id[char.upper()] = len(vocab) - 1\n",
-        "  id2char[len(vocab) - 1] = char.upper()\n",
         "print(f\"Vocabulary size: {len(vocab)} (52 letters + 2 specials)\")\n",
         "\n",
         "# 2. Encode / decode\n",
@@ -266,29 +187,11 @@
         "    \"\"\"\n",
         "    YOUR CODE HERE\n",
         "    \"\"\"\n",
-        "    result = []\n",
-        "    for char in text:\n",
-        "      if char in char2id:\n",
-        "        id = char2id[char]\n",
-        "      else:\n",
-        "        id = char2id[UNK]\n",
-        "      result.append(id)\n",
-        "\n",
-        "    return result\n",
         "\n",
         "def decode(ids):\n",
         "    \"\"\"\n",
         "    YOUR CODE HERE\n",
         "    \"\"\"\n",
-        "    result = []\n",
-        "    for id in ids:\n",
-        "      if id in id2char:\n",
-        "        char = id2char[id]\n",
-        "      else:\n",
-        "        char = UNK\n",
-        "      result.append(char)\n",
-        "\n",
-        "    return \"\".join(result)\n",
         "\n",
         "# 3. Demo\n",
         "sample = \"Hello\"\n",
@@ -322,53 +225,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "4675e67a",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4675e67a",
-        "outputId": "dbc8ddfc-b329-4d80-93cb-7df7e06189c8"
+        "id": "4675e67a"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "Input text : Unbelievable tokenization powers! 🚀\n",
-            "Token IDs  : [3118, 6667, 11203, 540, 11241, 1634, 5635, 0, 12520, 248, 222]\n",
-            "Tokens     : ['Un', 'bel', 'iev', 'able', 'Ġtoken', 'ization', 'Ġpowers', '!', 'ĠðŁ', 'ļ', 'Ģ']\n",
-            "Decoded    : Unbelievable tokenization powers! 🚀\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# 1. Load a pretrained BPE tokenizer (GPT-2 uses BPE).\n",
         "# Refer to  https://huggingface.co/docs/transformers/en/fast_tokenizers\n",
         "\n",
         "from transformers import AutoTokenizer\n",
         "\n",
-        "bpe_tok = AutoTokenizer.from_pretrained(\"gpt2\")\n",
         "\n",
         "# 2. Encode / decode\n",
         "def encode(text):\n",
         "    \"\"\"\n",
         "    YOUR CODE HERE\n",
         "    \"\"\"\n",
-        "    bpe_tokens = bpe_tok.tokenize(text)\n",
-        "    ids = bpe_tok.convert_tokens_to_ids(bpe_tokens)\n",
-        "    return ids\n",
-        "\n",
         "\n",
         "def decode(ids):\n",
         "    \"\"\"\n",
         "    YOUR CODE HERE\n",
         "    \"\"\"\n",
-        "    bpe_tokens = bpe_tok.convert_ids_to_tokens(ids)\n",
-        "    text = bpe_tok.convert_tokens_to_string(bpe_tokens)\n",
-        "    return text\n",
         "\n",
         "# 3. Demo\n",
         "sample = \"Unbelievable tokenization powers! 🚀\"\n",
@@ -396,31 +275,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "7704c470",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "7704c470",
-        "outputId": "bdc9ec6f-376d-457a-991b-d2f82f491c8d"
+        "id": "7704c470"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'\\nYOUR CODE HERE\\n'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 16
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Use gpt2 and cl100k_base to encode and decode the following text\n",
         "# Refer to https://github.com/openai/tiktoken\n",
@@ -430,9 +290,7 @@
         "\n",
         "\"\"\"\n",
         "YOUR CODE HERE\n",
-        "\"\"\"\n",
-        "gpt2_tok = tiktoken.get_encoding(\"gpt2\")\n",
-        "cl100k_base_tok = tiktoken.get_encoding(\"cl100k_base\")"
+        "\"\"\""
       ]
     },
     {
@@ -492,35 +350,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "e425948a",
       "metadata": {
         "id": "e425948a"
       },
       "outputs": [],
       "source": [
+        "import torch\n",
         "import torch.nn as nn\n",
+        "\n",
         "class Linear(nn.Module):\n",
         "    def __init__(self, in_features, out_features):\n",
         "        super(Linear, self).__init__()\n",
-        "        \"\"\"\n",
-        "        YOUR CODE HERE\n",
-        "        \"\"\"\n",
+        "        self.weight = nn.Parameter(torch.randn(out_features, in_features))\n",
+        "        self.bias = nn.Parameter(torch.randn(out_features))\n",
         "\n",
         "    def forward(self, x):\n",
-        "        \"\"\"\n",
-        "        YOUR CODE HERE\n",
-        "        \"\"\""
+        "        return x @ self.weight.t() + self.bias"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "13e5e225",
       "metadata": {
-        "id": "13e5e225"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "13e5e225",
+        "outputId": "7d94a424-73a8-4532-c3e8-ab75751f1639"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Input : tensor([ 1.0000, -1.0000,  0.5000])\n",
+            "Weights: Parameter containing:\n",
+            "tensor([[-0.1375, -0.2915, -0.0350],\n",
+            "        [ 0.0745, -0.5103, -0.1001]], requires_grad=True)\n",
+            "Bias   : Parameter containing:\n",
+            "tensor([-0.0429, -0.2348], requires_grad=True)\n",
+            "Output : tensor([0.0936, 0.2999], grad_fn=<ViewBackward0>)\n"
+          ]
+        }
+      ],
       "source": [
         "import torch.nn as nn, torch\n",
         "\n",
