--- a/project_1/lm_playground.ipynb
+++ b/project_1/lm_playground.ipynb
@@ -88,12 +88,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "id": "d784a288",
       "metadata": {
-        "id": "d784a288"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d784a288",
+        "outputId": "1a7b2b84-d92f-4709-db2f-75df2c3c1d2a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Vocabulary size: 22 words\n",
+            "First 15 vocab entries: ['[PAD]', '[UNK]', 'The', 'quick', 'brown', 'fox', 'jumps', 'over', 'the', 'lazy', 'dog', 'Tokenization', 'converts', 'text', 'to']\n",
+            "\n",
+            "Input text : The brown unicorn jumps\n",
+            "Token IDs  : [2, 4, 1, 6]\n",
+            "Decoded    : The brown [UNK] jumps\n"
+          ]
+        }
+      ],
       "source": [
         "# 1. Tiny corpus\n",
         "corpus = [\n",
@@ -104,13 +121,21 @@
         "\n",
         "# 2. Build the vocabulary\n",
         "PAD, UNK = \"[PAD]\", \"[UNK]\"\n",
-        "vocab = []\n",
-        "word2id = {}\n",
-        "id2word = {}\n",
+        "vocab = [PAD, UNK]\n",
+        "word2id = {PAD: 0, UNK: 1}\n",
+        "id2word = {0: PAD, 1: UNK}\n",
         "\n",
         "\"\"\"\n",
         "YOUR CODE HERE\n",
         "\"\"\"\n",
+        "current_id = 2\n",
+        "for line in corpus:\n",
+        "  for word in line.split(\" \"):\n",
+        "    if word not in vocab:\n",
+        "      vocab.append(word)\n",
+        "      word2id[word] = current_id\n",
+        "      id2word[current_id] = word\n",
+        "      current_id += 1\n",
         "\n",
         "print(f\"Vocabulary size: {len(vocab)} words\")\n",
         "print(\"First 15 vocab entries:\", vocab[:15])\n",
@@ -120,13 +145,29 @@
         "    \"\"\"\n",
         "    YOUR CODE HERE\n",
         "    \"\"\"\n",
-        "    pass\n",
+        "    result = []\n",
+        "    for word in text.split(\" \"):\n",
+        "      if word in word2id:\n",
+        "        id = word2id[word]\n",
+        "      else:\n",
+        "        id = word2id[UNK]\n",
+        "      result.append(id)\n",
+        "\n",
+        "    return result\n",
         "\n",
         "def decode(ids):\n",
         "    \"\"\"\n",
         "    YOUR CODE HERE\n",
         "    \"\"\"\n",
-        "    pass\n",
+        "    result = []\n",
+        "    for id in ids:\n",
+        "      if id in id2word:\n",
+        "        word = id2word[id]\n",
+        "      else:\n",
+        "        word = UNK\n",
+        "      result.append(word)\n",
+        "\n",
+        "    return \" \".join(result)\n",
         "\n",
         "# 4. Demo\n",
         "sample = \"The brown unicorn jumps\"\n",
@@ -134,6 +175,7 @@
         "recovered = decode(ids)\n",
         "\n",
         "print(\"\\nInput text :\", sample)\n",
+        "\n",
         "print(\"Token IDs  :\", ids)\n",
         "print(\"Decoded    :\", recovered)"
       ]
