--- a/project_1/lm_playground.ipynb
+++ b/project_1/lm_playground.ipynb
@@ -206,12 +206,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "id": "4ac29144",
       "metadata": {
-        "id": "4ac29144"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4ac29144",
+        "outputId": "1389f387-aee6-4473-98de-68c5ddb4f231"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Vocabulary size: 54 (52 letters + 2 specials)\n",
+            "\n",
+            "Input text : Hello\n",
+            "Token IDs  : [17, 10, 24, 24, 30]\n",
+            "Decoded    : Hello\n"
+          ]
+        }
+      ],
       "source": [
         "# 1. Build a fixed vocabulary # a–z + A–Z + padding + unkwown\n",
         "import string\n",
@@ -222,6 +238,15 @@
         "\"\"\"\n",
         "YOUR CODE HERE\n",
         "\"\"\"\n",
+        "vocab.append(\"[PAD]\")\n",
+        "vocab.append(\"[UNK]\")\n",
+        "for char in string.ascii_lowercase:\n",
+        "  vocab.append(char)\n",
+        "  char2id[char] = len(vocab) - 1\n",
+        "  id2char[len(vocab) - 1] = char\n",
+        "  vocab.append(char.upper())\n",
+        "  char2id[char.upper()] = len(vocab) - 1\n",
+        "  id2char[len(vocab) - 1] = char.upper()\n",
         "print(f\"Vocabulary size: {len(vocab)} (52 letters + 2 specials)\")\n",
         "\n",
         "# 2. Encode / decode\n",
@@ -229,11 +254,29 @@
         "    \"\"\"\n",
         "    YOUR CODE HERE\n",
         "    \"\"\"\n",
+        "    result = []\n",
+        "    for char in text:\n",
+        "      if char in char2id:\n",
+        "        id = char2id[char]\n",
+        "      else:\n",
+        "        id = char2id[UNK]\n",
+        "      result.append(id)\n",
+        "\n",
+        "    return result\n",
         "\n",
         "def decode(ids):\n",
         "    \"\"\"\n",
         "    YOUR CODE HERE\n",
         "    \"\"\"\n",
+        "    result = []\n",
+        "    for id in ids:\n",
+        "      if id in id2char:\n",
+        "        char = id2char[id]\n",
+        "      else:\n",
+        "        char = UNK\n",
+        "      result.append(char)\n",
+        "\n",
+        "    return \"\".join(result)\n",
         "\n",
         "# 3. Demo\n",
         "sample = \"Hello\"\n",
@@ -242,7 +285,7 @@
         "\n",
         "print(\"\\nInput text :\", sample)\n",
         "print(\"Token IDs  :\", ids)\n",
-        "print(\"Decoded    :\", recovered)\n"
+        "print(\"Decoded    :\", recovered)"
       ]
     },
     {
@@ -267,29 +310,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "4675e67a",
       "metadata": {
-        "id": "4675e67a"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4675e67a",
+        "outputId": "3d29d31f-ac0d-42d9-df2b-7f400b565562"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Input text : Unbelievable tokenization powers! 🚀\n",
+            "Token IDs  : [3118, 6667, 11203, 540, 11241, 1634, 5635, 0, 12520, 248, 222]\n",
+            "Tokens     : ['Un', 'bel', 'iev', 'able', 'Ġtoken', 'ization', 'Ġpowers', '!', 'ĠðŁ', 'ļ', 'Ģ']\n",
+            "Decoded    : Unbelievable tokenization powers! 🚀\n"
+          ]
+        }
+      ],
       "source": [
         "# 1. Load a pretrained BPE tokenizer (GPT-2 uses BPE).\n",
         "# Refer to  https://huggingface.co/docs/transformers/en/fast_tokenizers\n",
         "\n",
         "from transformers import AutoTokenizer\n",
         "\n",
+        "bpe_tok = AutoTokenizer.from_pretrained(\"gpt2\")\n",
         "\n",
         "# 2. Encode / decode\n",
         "def encode(text):\n",
         "    \"\"\"\n",
         "    YOUR CODE HERE\n",
         "    \"\"\"\n",
+        "    bpe_tokens = bpe_tok.tokenize(text)\n",
+        "    ids = bpe_tok.convert_tokens_to_ids(bpe_tokens)\n",
+        "    return ids\n",
+        "\n",
         "\n",
         "def decode(ids):\n",
         "    \"\"\"\n",
         "    YOUR CODE HERE\n",
         "    \"\"\"\n",
+        "    bpe_tokens = bpe_tok.convert_ids_to_tokens(ids)\n",
+        "    text = bpe_tok.convert_tokens_to_string(bpe_tokens)\n",
+        "    return text\n",
         "\n",
         "# 3. Demo\n",
         "sample = \"Unbelievable tokenization powers! 🚀\"\n",
@@ -299,7 +366,7 @@
         "print(\"\\nInput text :\", sample)\n",
         "print(\"Token IDs  :\", ids)\n",
         "print(\"Tokens     :\", bpe_tok.convert_ids_to_tokens(ids))\n",
-        "print(\"Decoded    :\", recovered)\n"
+        "print(\"Decoded    :\", recovered)"
       ]
     },
     {
@@ -317,7 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "7704c470",
       "metadata": {
         "id": "7704c470"
@@ -332,7 +399,9 @@
         "\n",
         "\"\"\"\n",
         "YOUR CODE HERE\n",
-        "\"\"\""
+        "\"\"\"\n",
+        "gpt2_tok = tiktoken.get_encoding(\"gpt2\")\n",
+        "cl100k_base_tok = tiktoken.get_encoding(\"cl100k_base\")"
       ]
     },
     {
