--- a/project_1/lm_playground.ipynb
+++ b/project_1/lm_playground.ipynb
@@ -1201,42 +1201,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "id": "57b73e7a",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "57b73e7a",
-        "outputId": "3a4a3ab9-100d-46e3-c979-37f75e684828"
+        "id": "57b73e7a"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'\\nYOUR CODE HERE\\n'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 38
-        }
-      ],
+      "outputs": [],
       "source": [
         "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+        "\n",
         "MODELS = {\n",
         "    \"gpt2\": \"gpt2\",\n",
         "    \"qwen\": \"Qwen/Qwen1.5-1.8B-Chat\"\n",
         "}\n",
         "tokenizers, models = {}, {}\n",
+        "\n",
         "# Load models and tokenizers\n",
-        "\"\"\"\n",
-        "YOUR CODE HERE\n",
-        "\"\"\"\n"
+        "for k, v in MODELS.items():\n",
+        "    tokenizers[k] = AutoTokenizer.from_pretrained(v)\n",
+        "    models[k] = AutoModelForCausalLM.from_pretrained(v)\n"
       ]
     },
     {
