--- a/project_1/lm_playground.ipynb
+++ b/project_1/lm_playground.ipynb
@@ -1904,12 +1904,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "1a67a884",
       "metadata": {
-        "id": "1a67a884"
+        "id": "1a67a884",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 174
+        },
+        "outputId": "d8483a38-a92b-4bd2-9bb1-742ab9b54ac3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "== GPT2 | top-k ==\n",
+            "input: What is 2+2?\n",
+            "None\n",
+            "\n",
+            "== GPT2 | top-p ==\n",
+            "input: Suggest a party theme.\n",
+            "None\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\nYOUR CODE HERE\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ],
       "source": [
         "import ipywidgets as widgets\n",
         "from IPython.display import display, Markdown\n",
@@ -1926,6 +1959,15 @@
         "    \"\"\"\n",
         "    YOUR CODE HERE\n",
         "    \"\"\"\n",
+        "    generate(model_key, prompt, strategy, temperature, max_new_tokens)\n",
+        "\n",
+        "\n",
+        "tests=[(\"Once upon a time\",\"greedy\"),(\"What is 2+2?\",\"top-k\"),(\"Suggest a party theme.\",\"top-p\")]\n",
+        "for prompt,strategy in tests[1:]:\n",
+        "  for key in [\"gpt2\"]:\n",
+        "    print(f\"\\n== {key.upper()} | {strategy} ==\")\n",
+        "    print(generate_playground(key,prompt,strategy,temperature=1.0,max_new_tokens=10))\n",
+        "\n",
         "\n",
         "# Your code to build boxes, dropdowns, and other elements in the UI using widgets and creating the UI using widgets.vbox and display.\n",
         "# Refer to https://ipywidgets.readthedocs.io/en/stable/\n",
