Finished up to (not including) section 4 in project2

--- a/project_2/rag_chatbot.ipynb
+++ b/project_2/rag_chatbot.ipynb
@@ -91,10 +91,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "65b49fcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/masudkhan/miniconda3/envs/rag-chatbot/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Libraries imported! You're good to go!\n"
+     ]
+    }
+   ],
    "source": [
     "# Import standard libraries for file handling and text processing\n",
     "import os, pathlib, textwrap, glob\n",
@@ -158,17 +174,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9ff055a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['data/Everstorm_Return_and_exchange_policy.pdf', 'data/Everstorm_Product_sizing_and_care_guide.pdf', 'data/Everstorm_Shipping_and_Delivery_Policy.pdf', 'data/Everstorm_Payment_refund_and_security.pdf']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ignoring wrong pointing object 81 0 (offset 0)\n",
+      "Ignoring wrong pointing object 76 0 (offset 0)\n",
+      "Ignoring wrong pointing object 80 0 (offset 0)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 8 PDF pages from 4 files.\n"
+     ]
+    }
+   ],
    "source": [
     "pdf_paths = glob.glob(\"data/Everstorm_*.pdf\")\n",
+    "print(pdf_paths)\n",
     "raw_docs = []\n",
     "\n",
     "\"\"\"\n",
     "YOUR CODE HERE (~2 lines of code)\n",
     "\"\"\"\n",
+    "for path in pdf_paths:\n",
+    "    loader = PyPDFLoader(path)\n",
+    "    raw_docs.extend(loader.load())\n",
     "\n",
     "print(f\"Loaded {len(raw_docs)} PDF pages from {len(pdf_paths)} files.\")"
    ]
@@ -188,10 +232,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "65abec32",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetched 2 documents from the web.\n"
+     ]
+    }
+   ],
    "source": [
     "URLS = [\n",
     "    # --- BigCommerce – shipping & refunds ---\n",
@@ -204,6 +256,9 @@
     "]\n",
     "\n",
     "try:\n",
+    "    # raise Exception(\"mabudio fail test\")\n",
+    "    loader = UnstructuredURLLoader(URLS)\n",
+    "    raw_docs = loader.load()\n",
     "    ########################\n",
     "    #### Your code here (~2-3 lines of code) ####\n",
     "    ########################\n",
@@ -214,6 +269,7 @@
     "    ########################\n",
     "    #### Your code here ####\n",
     "    ########################   \n",
+    "    raw_docs = [PyPDFLoader(pdf_path).load() for pdf_path in pdf_paths]\n",
     "    print(f\"Loaded {len(raw_docs)} offline documents.\")"
    ]
   },
@@ -239,16 +295,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "450d48a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 51 chunks ready for embedding\n",
+      "Docs\n",
+      "\n",
+      "Store operations\n",
+      "\n",
+      "Shipping\n",
+      "\n",
+      "Overview\n",
+      "\n",
+      "Shipping\n",
+      "\n",
+      "You can create shipments from orders, and it is possible to create multiple shipments from a single order. A shipment represents a grouping of order line items that you can ship to a customer.\n"
+     ]
+    }
+   ],
    "source": [
     "chunks = []\n",
     "\"\"\"\n",
     "YOUR CODE HERE (~2 lines of code)\n",
     "\"\"\"\n",
-    "print(f\"✅ {len(chunks)} chunks ready for embedding\")"
+    "splitter = RecursiveCharacterTextSplitter(chunk_size=300, chunk_overlap=30)\n",
+    "chunks = splitter.split_documents(raw_docs)\n",
+    "print(f\"✅ {len(chunks)} chunks ready for embedding\")\n",
+    "print(chunks[0].page_content)"
    ]
   },
   {
@@ -289,17 +367,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "4a222122",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/v4/rz21fv5s5fn_4nv27jvlbh3m0000gn/T/ipykernel_93694/1311734590.py:7: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "  embeddings = SentenceTransformerEmbeddings(model_name=\"thenlper/gte-small\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "384\n"
+     ]
+    }
+   ],
    "source": [
     "embedding_vector = []\n",
     "\n",
-    "# Embed the sentence \"Hello world! and store it in an embedding_vector.\n",
+    "# Embed the sentence \"Hello world!\" and store it in an embedding_vector.\n",
     "\"\"\"\n",
     "YOUR CODE HERE (~2 lines of code)\n",
     "\"\"\"\n",
+    "embeddings = SentenceTransformerEmbeddings(model_name=\"thenlper/gte-small\")\n",
+    "embedding_vector = embeddings.embed_query(\"Hello world!\")\n",
+    "\n",
     "print(len(embedding_vector))"
    ]
   },
@@ -322,10 +419,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "611eda64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Vector store with 51 embeddings\n"
+     ]
+    }
+   ],
    "source": [
     "# Expected steps:\n",
     "    # 1. Build the FAISS index from the list of document chunks and their embeddings.\n",
@@ -336,6 +441,27 @@
     "\"\"\"\n",
     "YOUR CODE HERE (~3-5 lines of code)\n",
     "\"\"\"\n",
+    "import faiss\n",
+    "from langchain_community.docstore.in_memory import InMemoryDocstore\n",
+    "from uuid import uuid4\n",
+    "from langchain_core.documents import Document\n",
+    "\n",
+    "\n",
+    "index = faiss.IndexFlatL2(len(embedding_vector))\n",
+    "vectordb = FAISS(\n",
+    "    embedding_function=embeddings,\n",
+    "    index=index,\n",
+    "    docstore=InMemoryDocstore(),\n",
+    "    index_to_docstore_id={},\n",
+    ")\n",
+    "\n",
+    "documents = []\n",
+    "for chunk in chunks:\n",
+    "    documents.append(Document(page_content=chunk.page_content))\n",
+    "\n",
+    "uuids = [str(uuid4()) for _ in range(len(documents))]\n",
+    "\n",
+    "vectordb.add_documents(documents=documents, ids=uuids)\n",
     "\n",
     "print(\"✅ Vector store with\", vectordb.index.ntotal, \"embeddings\")"
    ]
@@ -629,7 +755,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
