did project without streamlit optional section

--- a/project_2/rag_chatbot.ipynb
+++ b/project_2/rag_chatbot.ipynb
@@ -91,18 +91,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "65b49fcb",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/masudkhan/miniconda3/envs/rag-chatbot/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -131,10 +123,13 @@
     "from langchain.llms import Ollama\n",
     "\n",
     "# Build a retrieval chain that combines a retriever, a prompt, and an LLM\n",
-    "from langchain.chains import ConversationalRetrievalChain\n",
-    "\n",
+    "from langchain.chains import (\n",
+    "    create_history_aware_retriever,\n",
+    "    create_retrieval_chain,\n",
+    "    ConversationalRetrievalChain\n",
+    ")\n",
     "# Create prompts for the RAG system\n",
-    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.prompts import PromptTemplate, ChatPromptTemplate, MessagesPlaceholder\n",
     "\n",
     "print(\"✅ Libraries imported! You're good to go!\")"
    ]
@@ -174,10 +169,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9ff055a6",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ignoring wrong pointing object 81 0 (offset 0)\n",
+      "Ignoring wrong pointing object 76 0 (offset 0)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -189,8 +192,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ignoring wrong pointing object 81 0 (offset 0)\n",
-      "Ignoring wrong pointing object 76 0 (offset 0)\n",
       "Ignoring wrong pointing object 80 0 (offset 0)\n"
      ]
     },
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "65abec32",
    "metadata": {},
    "outputs": [
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "450d48a0",
    "metadata": {},
    "outputs": [
@@ -367,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "4a222122",
    "metadata": {},
    "outputs": [
@@ -375,7 +376,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/v4/rz21fv5s5fn_4nv27jvlbh3m0000gn/T/ipykernel_93694/1311734590.py:7: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "/var/folders/v4/rz21fv5s5fn_4nv27jvlbh3m0000gn/T/ipykernel_34313/1311734590.py:7: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
       "  embeddings = SentenceTransformerEmbeddings(model_name=\"thenlper/gte-small\")\n"
      ]
     },
@@ -419,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "611eda64",
    "metadata": {},
    "outputs": [
@@ -528,10 +529,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b1d34a32",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello there! 😊 How can I help you today?\n"
+     ]
+    }
+   ],
    "source": [
     "# Expected steps:\n",
     "    # 1. Initialize the model (for example, gemma3:1b) with a low temperature such as 0.1 for more factual outputs.\n",
@@ -539,7 +548,9 @@
     "\n",
     "\"\"\"\n",
     "YOUR CODE HERE (~1-2 line of code)\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "llm = Ollama(model=\"gemma3:1b\", temperature=0.1)\n",
+    "print(llm.invoke(\"Hello world!\"))"
    ]
   },
   {
@@ -570,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "dcecb2b6",
    "metadata": {},
    "outputs": [],
@@ -583,7 +594,7 @@
     "1) Use ONLY the provided <context> to answer.\n",
     "2) If the answer is not in the context, say: \"I don't know based on the retrieved documents.\"\n",
     "3) Be concise and accurate. Prefer quoting key phrases from the context.\n",
-    "4) When possible, cite sources as [source: {source}] using the metadata.\n",
+    "4) When possible, cite sources as [source: www.example.com] using the metadata.\n",
     "\n",
     "CONTEXT:\n",
     "{context}\n",
@@ -606,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "0b138b3d",
    "metadata": {},
    "outputs": [],
@@ -618,7 +629,22 @@
     "\n",
     "\"\"\"\n",
     "YOUR CODE HERE (~3-5 lines of code)\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "prompt_template = PromptTemplate(\n",
+    "    input_variables=[\"context\", \"question\"],\n",
+    "    template=SYSTEM_TEMPLATE\n",
+    ")\n",
+    "\n",
+    "llm = Ollama(model=\"gemma3:1b\", temperature=0.1)\n",
+    "\n",
+    "retriever = vectordb.as_retriever(search_kwargs={\"k\": 2})\n",
+    "\n",
+    "chain = ConversationalRetrievalChain.from_llm(\n",
+    "    retriever=retriever,\n",
+    "    llm=llm,\n",
+    "    combine_docs_chain_kwargs={\"prompt\": prompt_template}\n",
+    ")\n",
+    "\n"
    ]
   },
   {
@@ -640,6 +666,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "9cf1584e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 2 documents:\n",
+      "\n",
+      "--- Document 1 ---\n",
+      "\"amount\": 1,            // Amount to refund\n",
+      "    }\n",
+      "  ]\n",
+      "}\n",
+      "\n",
+      "--- Document 2 ---\n",
+      "\"quantity\": 1,                // Quantity to refund\n",
+      "    }\n",
+      "  ],\n",
+      "  \"payments\": [...]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Debug: Test if retriever finds relevant documents\n",
+    "test_query = \"What is your refund policy?\"\n",
+    "docs = retriever.get_relevant_documents(test_query)\n",
+    "print(f\"Found {len(docs)} documents:\")\n",
+    "for i, doc in enumerate(docs):\n",
+    "    print(f\"\\n--- Document {i+1} ---\")\n",
+    "    print(doc.page_content[:600])  # Print first 200 chars\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e5ee50de",
    "metadata": {},
@@ -649,10 +712,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "8f6d7a7d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "Q: If I'm not happy with my purchase, what is your refund policy and how do I start a return?\n",
+      "================================================================================\n",
+      "A: You must receive payment of the order before you can issue a refund. Offline order refunds\n",
+      "\n",
+      "USER:\n",
+      "If I'm not happy with my purchase, what is your refund policy and how do I start a return?\n",
+      "I'm not sure from the docs.\n",
+      "\n",
+      "================================================================================\n",
+      "Q: How long will delivery take for a standard order, and where can I track my package once it ships?\n",
+      "================================================================================\n",
+      "A: I'm not sure from the docs.\n",
+      "\n",
+      "Delivery time depends on the shipping zone. Within North America, the shipping methods might include Free Shipping, Ship-by-Weight, and USPS.\n",
+      "\n",
+      "You can track your package once it ships using the Order Shipments resource. [source: www.example.com]\n",
+      "\n",
+      "================================================================================\n",
+      "Q: What's the quickest way to contact your support team, and what are your operating hours?\n",
+      "================================================================================\n",
+      "A: The POST Refund Quote exposes provider_ids.\n",
+      "\n",
+      "How do I get a list of provider_ids?\n",
+      "\n",
+      "The POST Refund Quote exposes provider_ids.\n",
+      "\n",
+      "Will a refunded item be returned to inventory?\n",
+      "\n",
+      "I'm not sure from the docs.\n"
+     ]
+    }
+   ],
    "source": [
     "test_questions = [\n",
     "    \"If I'm not happy with my purchase, what is your refund policy and how do I start a return?\",\n",
@@ -667,7 +768,20 @@
     "\n",
     "\"\"\"\n",
     "YOUR CODE HERE\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "# Initialize empty chat history\n",
+    "chat_history = []\n",
+    "\n",
+    "# Loop through test questions\n",
+    "for question in test_questions:\n",
+    "    print(f\"\\n{'='*80}\")\n",
+    "    print(f\"Q: {question}\")\n",
+    "    print(f\"{'='*80}\")\n",
+    "    \n",
+    "    result = chain.invoke({\"question\": question, \"chat_history\": chat_history})\n",
+    "    print(f\"A: {result['answer']}\")\n",
+    "    chat_history.append((question, result['answer']))"
    ]
   },
   {
@@ -691,6 +805,14 @@
     "\n",
     "In this cell, we write a minimal **`app.py`** that starts a simple chat UI and calls your RAG chain."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11afe143",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
